feat(auth): implement courier logout functionality
- Added a `logout` method to `CourierAuthService` to invalidate all refresh tokens for a courier's account.
- Exposed this functionality via a new `POST /logout/courier` endpoint.

refactor(auth): differentiate customer and courier logout endpoints

- Renamed the customer logout endpoint from `/logout` to `/logout/customer` to avoid ambiguity with the new courier logout endpoint.

chore(deps): update dependencies to fix CVEs and add features

- Upgraded `spring-websocket` and `logback-core` to address security vulnerabilities.
- Added `hibernate-spatial` for geospatial data handling.
- Added `assertj-core` for improved test assertions.
- Removed commented-out AMQP dependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -29,16 +29,13 @@
     <properties>
         <java.version>25</java.version>
         <sentry.version>8.16.0</sentry.version>
+        <tomcat.version>10.1.47</tomcat.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-amqp</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
@@ -84,6 +81,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+        <!-- Explicit upgrade to fix CVE -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+            <version>6.2.12</version>
+        </dependency>
+        <!-- Explicit upgrade to fix Logback CVE -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.5.25</version>
+        </dependency>
         <dependency>
             <groupId>io.sentry</groupId>
             <artifactId>sentry-spring-boot-starter-jakarta</artifactId>
@@ -119,11 +128,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.amqp</groupId>-->
-<!--            <artifactId>spring-rabbit-test</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.27.7</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
@@ -133,6 +143,12 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-spatial</artifactId>
+            <version>8.0.0.Alpha1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <dependencyManagement>
